--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
