--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "cookies-next": "^2.1.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "joi": "^17.9.2",
@@ -27,8 +28,10 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
+    "sweetalert2": "^11.7.20",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
