--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "cookies-next": "^2.1.2",
+    "debounce-promise": "^3.1.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "joi": "^17.9.2",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/debounce-promise": "^3.1.6",
     "@types/jsonwebtoken": "^9.0.2",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
